--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <title>Project 1 Assessment</title>
 </head>
 <body>
+    <h1 class="main-display">0</h1>
     
+    <div class="controls">
+        <button id="plus">+</button>
+        <input type="number" id="number" value="1">
+        <button id="minus">-</button>
+    </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
