--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Project 1 Assessment</title>
 </head>
 <body>
-    <h1 class="main-display">0</h1>
+    <h1 class="main-display"></h1>
     
     <div class="controls">
-        <button id="plus">+</button>
-        <input type="number" id="number" value="1">
-        <button id="minus">-</button>
+        <button class="btn plus">+</button>
+        <input type="number" class="number" value="1">
+        <button class="btn minus">-</button>
     </div>
     <script src="js/main.js"></script>
 </body>
